# safeclimb_firmware

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.bk  sdkconfig.bk.old  sdkconfig.old  tool_set_config.json
.metadata/: version.ini
.metadata/.plugins/org.eclipse.cdt.core/: safeclimb_firmware.1732665662065.pdom  tower_firmware.1732665967962.pdom
.metadata/.plugins/org.eclipse.core.resources/.root/: 2.tree
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
certificates/: credentials_command.txt  device.pem  private.key  public.key
components/lora/: lora.c
components/temperature/: CMakeLists.txt
main/: ADC.cpp  ADC.h  Battery.cpp  Battery.h  BluetoothManager.cpp  BluetoothManager.h  CMakeLists.txt  Kconfig.projbuild  LoraManager.cpp  LoraManager.h  LoraPackage.cpp  LoraPackage.h  RainDrop.cpp  RainDrop.h  Soil.cpp  Soil.h  Temperature.c  Temperature.h  WIFI.cpp  WIFI.h  Wind.c  Wind.cpp  Wind.h  bluetooth.c  bluetooth.h  idf_component.yml  main.cpp  parameters.h
main/networking/mqtt/: core_mqtt_agent_manager.h
repeater_firmware/: .cproject  CMakeLists.txt  sdkconfig  sdkconfig.bk  sdkconfig.bk.old
repeater_firmware/components/temperature/: CMakeLists.txt
repeater_firmware/main/: idf_component.yml
server_firmware/components/one-wire/: owb_rmt.c
server_firmware/main/: ADC.cpp  CMakeLists.txt  idf_component.yml  main.cpp
tower_firmware/: .gitignore  .project
tower_firmware/main/: LoraManager.cpp  LoraPackage.cpp  bluetooth.h  main.cpp
(+15 files in other folders)
